force-app/main/default/objects/AHA_ERL_Category__c/AHA_ERL_Category__c.object-meta.xml
<CustomObject>
    <label>AHA-ERL Category</label>
    <nameField>
        <label>AHA-ERL Code Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AHA-ERL Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>