force-app/main/default/objects/AHA_ERL_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMMUNAL FACILITIES</fullName>
            </value>
            <value>
                <fullName>DOORS AND WINDOWS</fullName>
            </value>
            <value>
                <fullName>EMERGENCIES</fullName>
            </value>
            <value>
                <fullName>GARAGES AND EXTERNAL</fullName>
            </value>
            <value>
                <fullName>HEATING AND ELECTRICS</fullName>
            </value>
            <value>
                <fullName>KITCHENS AND SINKS</fullName>
            </value>
            <value>
                <fullName>PLUMBING</fullName>
            </value>
            <value>
                <fullName>ROOFS CHIMNEYS AND DRAINS</fullName>
            </value>
            <value>
                <fullName>WALLS FLOORS AND STAIRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>