force-app/main/default/objects/AHA_ERL_Category__c/fields/EditModeLabel__c.field-meta.xml
<CustomField>
    <fullName>EditModeLabel__c</fullName>
    <label>Edit Mode Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>