force-app/main/default/objects/AHA_ERL_Category__c/fields/ExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>External Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>