force-app/main/default/objects/AHA_ERL_Category__c/fields/Full_Category__c.field-meta.xml
<CustomField>
    <fullName>Full_Category__c</fullName>
    <formula>TEXT(Category__c) &amp; &quot; - &quot; &amp; TEXT(SubCategoryPicklist__c) &amp; &quot; - &quot; &amp; TEXT(ItemPicklist__c) &amp; &quot; - &quot; &amp; TEXT(Sub_Item__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Category</label>
    <type>Text</type>
</CustomField>