force-app/main/default/objects/AHA_ERL_Category__c/fields/Full_Category_Layout__c.field-meta.xml
<CustomField>
    <fullName>Full_Category_Layout__c</fullName>
    <formula>&apos;LAYOUT: &apos; &amp; TEXT(Category__c) &amp; &quot; - &quot; &amp; TEXT(SubCategoryPicklist__c) &amp; &quot; - &quot; &amp; TEXT(ItemPicklist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Category (Layout)</label>
    <type>Text</type>
</CustomField>