force-app/main/default/objects/AHA_ERL_Category__c/fields/FullLabel__c.field-meta.xml
<CustomField>
    <fullName>FullLabel__c</fullName>
    <formula>IF(NOT( ISNULL( ParentCategoryLookup__c ) ),  ParentCategoryLookup__r.Label__c + &apos; &apos; +  Label__c, Label__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Label</label>
    <type>Text</type>
</CustomField>