force-app/main/default/objects/AHA_ERL_Category__c/fields/Guided__c.field-meta.xml
<CustomField>
    <fullName>Guided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guided</label>
    <type>Checkbox</type>
</CustomField>