force-app/main/default/objects/AHA_ERL_Category__c/fields/HasParent__c.field-meta.xml
<CustomField>
    <fullName>HasParent__c</fullName>
    <formula>NOT( OR( ISNULL ( ParentCategoryLookup__c ), ISBLANK( ParentCategoryLookup__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>