force-app/main/default/objects/AHA_ERL_Category__c/fields/ImageFileText__c.field-meta.xml
<CustomField>
    <fullName>ImageFileText__c</fullName>
    <defaultValue>&apos;PLACEHOLDER.jpg&apos;</defaultValue>
    <description>The location of the image file in the SOR Picker Static Resource zip file.</description>
    <inlineHelpText>The location of the image file in the SOR Picker Static Resource zip file. If you don&apos;t know what that static resource is, you shouldn&apos;t be editing this!</inlineHelpText>
    <label>Image File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>