force-app/main/default/objects/AHA_ERL_Category__c/fields/ItemPicklist__c.field-meta.xml
<CustomField>
    <fullName>ItemPicklist__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubCategoryPicklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAPS</fullName>
            </value>
            <value>
                <fullName>BATH TILES</fullName>
            </value>
            <value>
                <fullName>BATH</fullName>
            </value>
            <value>
                <fullName>LEAKS AND BLOCKAGES</fullName>
            </value>
            <value>
                <fullName>PANELS</fullName>
            </value>
            <value>
                <fullName>FLOOR</fullName>
            </value>
            <value>
                <fullName>BASIN TILES</fullName>
            </value>
            <value>
                <fullName>BASIN: LEAKS AND BLOCKAGES</fullName>
            </value>
            <value>
                <fullName>DAMAGED BASIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>