force-app/main/default/objects/AHA_ERL_Category__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The label to appear on the Category/Item/List</description>
    <inlineHelpText>The label to appear on the Category/Item/List</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>