force-app/main/default/objects/AHA_ERL_Category__c/fields/Layout_Left__c.field-meta.xml
<CustomField>
    <fullName>Layout_Left__c</fullName>
    <inlineHelpText>Enter a % to indicate how far from the left this item label will appear on the subcategory image</inlineHelpText>
    <label>Layout Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>