force-app/main/default/objects/AHA_ERL_Category__c/fields/Layout_Top__c.field-meta.xml
<CustomField>
    <fullName>Layout_Top__c</fullName>
    <inlineHelpText>Enter a % to indicate how far from the top this item label will appear on the subcategory</inlineHelpText>
    <label>Layout Top</label>
    <length>255</length>
    <type>Text</type>
</CustomField>