force-app/main/default/objects/AHA_ERL_Category__c/fields/ParentCategoryLookup__c.field-meta.xml
<CustomField>
    <fullName>ParentCategoryLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Category</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or you have tried to parent a category/button to an ItemList.</errorMessage>
        <filterItems>
            <field>AHA_ERL_Category__c.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>ItemList</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AHA_ERL_Category__c</referenceTo>
    <relationshipLabel>Child Categories</relationshipLabel>
    <relationshipName>AHA_ERL_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>