force-app/main/default/objects/AHA_ERL_Category__c/fields/ParentExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ParentExternalIdentifier__c</fullName>
    <formula>ParentCategoryLookup__r.ExternalIdentifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent External Identifier</label>
    <type>Text</type>
</CustomField>