force-app/main/default/objects/AHA_ERL_Category__c/fields/RedirectToLookup__c.field-meta.xml
<CustomField>
    <fullName>RedirectToLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Redirect To</label>
    <referenceTo>AHA_ERL_Category__c</referenceTo>
    <relationshipLabel>Buttons that Redirect to this</relationshipLabel>
    <relationshipName>RedirectCategories</relationshipName>
    <type>Lookup</type>
</CustomField>