force-app/main/default/objects/AHA_ERL_Category__c/fields/Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>Sub_Item__c</fullName>
    <label>Sub-Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ItemPicklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TAPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>