force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/ItemList.recordType-meta.xml
<RecordType>
    <fullName>ItemList</fullName>
    <active>true</active>
    <description>An Item List is a list of SORs within a sub-category, they appear when a button is clicked and are parented to buttons.</description>
    <label>Item List</label>
</RecordType>