force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/RepairCategory.recordType-meta.xml
<RecordType>
    <fullName>RepairCategory</fullName>
    <active>true</active>
    <description>This is used for defining a category that will appear in the AHA-ERL Picker. Categories can be parented to each other to create a hierrarchy.</description>
    <label>Repair Category</label>
</RecordType>