force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/RepairLocationButton.recordType-meta.xml
<RecordType>
    <fullName>RepairLocationButton</fullName>
    <active>true</active>
    <description>A Repair Location Button describes a button that appears over an image, where the user will select a repair. They are parented to Categories.</description>
    <label>Repair Location Button</label>
</RecordType>