force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/RepairLocationCloseup.recordType-meta.xml
<RecordType>
    <fullName>RepairLocationCloseup</fullName>
    <active>true</active>
    <description>A closeup is an image where buttons can be placed.</description>
    <label>Repair Location Closeup</label>
</RecordType>