force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/SOR_Category.recordType-meta.xml
<RecordType>
    <fullName>SOR_Category</fullName>
    <active>true</active>
    <description>This is used for defining a category that will appear in the AHA-ERL Picker.</description>
    <label>SOR Category</label>
</RecordType>