force-app/main/default/objects/AHA_ERL_Category__c/recordTypes/SOR_Item_Layout.recordType-meta.xml
<RecordType>
    <fullName>SOR_Item_Layout</fullName>
    <active>true</active>
    <description>used to define where items appear on the image representing the selected SubCategory in the AHA-ERL picker</description>
    <label>SOR Item Layout</label>
</RecordType>