force-app/main/default/objects/AHA_ERL_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Guided__c</columns>
    <columns>Label__c</columns>
    <columns>Layout_Left__c</columns>
    <columns>Layout_Top__c</columns>
    <columns>ParentCategoryLookup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>