force-app/main/default/objects/AHA_ERL_Category__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Guided__c</columns>
    <columns>Label__c</columns>
    <columns>Layout_Left__c</columns>
    <columns>Layout_Top__c</columns>
    <columns>ParentCategoryLookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Guided__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Guided Only</label>
</ListView>