force-app/main/default/objects/AHA_ERL_Category__c/listViews/Root_Categories.listView-meta.xml
<ListView>
    <fullName>Root_Categories</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Label__c</columns>
    <columns>Layout_Left__c</columns>
    <columns>Layout_Top__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HasParent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Root Categories</label>
</ListView>